Project Restructure: Major Cleanup & Organization
This commit implements a comprehensive project restructure to improve
maintainability, scalability, and developer experience.

## What Changed

### New Directory Structure
- Created `/scripts/` - Consolidated all utility scripts
  - `/scripts/database/` - Database management scripts (10 files)
  - `/scripts/build/` - Build and setup scripts (4 files)
  - `/scripts/git/` - Git utility scripts (3 files)

- Reorganized `/docs/` - Categorized documentation
  - `/docs/setup/` - Setup and configuration guides (7 files)
  - `/docs/features/` - Feature documentation (7 files)
  - `/docs/development/` - Development guides (5 files)
  - `/docs/sessions/` - Session summaries (7 files)

### Files Moved
**Scripts → /scripts/database/**
- add_ratings.py
- add_store_urls.py (4 variants)
- create_games_seed.py
- update_games.py
- fix_commas.py
- fix_game_constructors.py
- add_urls.bat

**Scripts → /scripts/build/**
- rebuild-backend.bat
- force-clean.bat
- setup-maven-wrapper.bat
- pre-run.bat

**Scripts → /scripts/git/**
- git-commit.bat
- commit-database-migration.bat
- commit-restore.bat

**Docs → /docs/setup/**
- All Maven and setup guides
- IntelliJ configuration docs
- Quick start guides

**Docs → /docs/features/**
- Loading spinner documentation
- Match percentage features
- Quick win implementations
- Quick start improvements

**Docs → /docs/development/**
- Claude instructions
- Implementation guides
- Quick reference
- Expansion summaries

**Docs → /docs/sessions/**
- Database migration summaries
- Session completion docs
- Store links documentation
- Success summaries

### Files Deleted
- NVIDIA Corporation/ (random folder)
- target/ (root level build artifacts)
- backend/target/ (now in .gitignore)
- backend/NEW_GAMES_TO_ADD.java (misplaced)
- commit-message.txt (temporary)
- remaining_games_with_ratings.txt (old data)
- fix_game_constructors.js (duplicate)
- MANUAL_ADD_URLS.md (moved to sessions)

### Updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Maven
 target/
+**/target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -12,6 +13,7 @@ buildNumber.properties
 
 # IDE
 .idea/
+.idea/workspace.xml
 *.iml
 .vscode/
 *.swp
@@ -28,3 +30,12 @@ Thumbs.db
 # Database
 *.db
 *.db-journal
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+
+# Temporary files
+*.tmp
+commit-message.txt
