feat: Add Firebase Authentication (Phase 1 & 2 complete)
Phase 1 - Frontend Firebase Setup:
- Add auth.js module with Google/email sign-in/sign-up
- Add auth modal UI with sign-in and sign-up forms
- Add auth header with user dropdown
- Add tab locking for Calendar and Profile tabs
- Add auth state management (authState global)
- Add toast notifications for auth events

Phase 2 - Backend User Support:
- Add Firebase Admin SDK dependency
- Add User entity with firebaseUid, email, displayName
- Add UserRepository and UserService
- Add AuthController with GET /auth/me endpoint
- Add FirebaseConfig for SDK initialization
- Add FirebaseAuthFilter for token validation
- Update GameSession entity with User relationship
- Fix GameSessionRepository JPQL queries (legacyUserId)
- Add firebase credential patterns to .gitignore

API: GET /auth/me requires Bearer token, returns/creates user

Next: Phase 3 (locked tab overlays), Phase 4 (session migration)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.properties.hibernate.format_sql=false
 # Reduce logging for production
 logging.level.org.hibernate=WARN
 logging.level.org.springframework=WARN
+
+# Firebase Configuration
+# Path to Firebase service account JSON file
+# Can be overridden with FIREBASE_CREDENTIALS_PATH environment variable
+firebase.credentials.path=${FIREBASE_CREDENTIALS_PATH:firebase-service-account.json}
