--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ __pycache__/
 # Temporary files
 *.tmp
 commit-message.txt
+
+# Firebase credentials (NEVER commit)
+firebase-service-account.json
+*-firebase-adminsdk-*.json
