"PostgreSQL-migration-for-Railway"

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,19 +1,21 @@
 server.port=8080
 spring.application.name=lutem-mvp
 
-# SQLite Database Configuration
-spring.datasource.url=jdbc:sqlite:lutem.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+# PostgreSQL Database Configuration (Railway provides these env vars automatically)
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://switchback.proxy.rlwy.net:55958/railway}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD:}
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
+# Connection pool settings
+spring.datasource.hikari.maximum-pool-size=5
 
 # Reduce logging for production
 logging.level.org.hibernate=WARN
 logging.level.org.springframework=WARN
 
 # Firebase Configuration
-# Path to Firebase service account JSON file
-# Can be overridden with FIREBASE_CREDENTIALS_PATH environment variable
 firebase.credentials.path=${FIREBASE_CREDENTIALS_PATH:firebase-service-account.json}
