--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 server.port=8080
 spring.application.name=lutem-mvp
 
-# PostgreSQL Database Configuration (Railway provides these env vars automatically)
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://switchback.proxy.rlwy.net:55958/railway}
+# PostgreSQL Database Configuration
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/railway}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Explicitly set dialect for Railway
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
