"Use-SPRING_DATASOURCE_URL-to-avoid-Railway-override"

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port=${PORT:8080}
 spring.application.name=lutem-mvp
 
 # PostgreSQL Database Configuration
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/railway}
+# Use SPRING_DATASOURCE_URL to avoid Railway's auto-injected DATABASE_URL (missing jdbc: prefix)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/railway}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:}
 spring.datasource.driver-class-name=org.postgresql.Driver
