--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -39,6 +39,13 @@
             <scope>runtime</scope>
         </dependency>
         
+        <!-- H2 Database for local development -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
