Add Steam API integration (phases S1-S3)
- Add TaggingSource enum (MANUAL, AI_GENERATED, USER_ADJUSTED, PENDING)
- Add steamAppId, taggingSource, taggingConfidence, rawgId to Game entity
- Create UserLibrary entity for user-game ownership
- Create SteamService for Steam API integration
- Create SteamController with /api/steam endpoints
- Add SteamIdMigration to auto-extract Steam IDs from existing games
- Add UserLibraryService and UserLibraryRepository
- Configure STEAM_API_KEY environment variable

--- a/backend/src/main/resources/application-local.properties
+++ b/backend/src/main/resources/application-local.properties
@@ -21,6 +21,9 @@ spring.h2.console.path=/h2-console
 # Firebase Configuration
 firebase.credentials.path=${FIREBASE_CREDENTIALS_PATH:firebase-service-account.json}
 
+# Steam API Configuration (get your key from https://steamcommunity.com/dev/apikey)
+steam.api.key=${STEAM_API_KEY:}
+
 # Development logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.com.lutem=DEBUG
