--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,3 +23,6 @@ logging.level.org.springframework=WARN
 
 # Firebase Configuration
 firebase.credentials.path=${FIREBASE_CREDENTIALS_PATH:firebase-service-account.json}
+
+# Steam API Configuration
+steam.api.key=${STEAM_API_KEY:}
