feat: Add Steam/Google auth + fix login logos

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -26,3 +26,14 @@ firebase.credentials.path=${FIREBASE_CREDENTIALS_PATH:firebase-service-account.j
 
 # Steam API Configuration
 steam.api.key=${STEAM_API_KEY:}
+
+# Steam OpenID Configuration (production)
+steam.return-url=${STEAM_RETURN_URL:https://lutemprototype-production.up.railway.app/auth/steam/callback}
+steam.realm=${STEAM_REALM:https://lutemprototype-production.up.railway.app}
+
+# Frontend URL for redirects
+frontend.url=${FRONTEND_URL:https://lutembeta.netlify.app}
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET:}
+jwt.expiration-ms=${JWT_EXPIRATION_MS:604800000}
