--- a/backend/src/main/resources/application-local.properties
+++ b/backend/src/main/resources/application-local.properties
@@ -22,7 +22,18 @@ spring.h2.console.path=/h2-console
 firebase.credentials.path=${FIREBASE_CREDENTIALS_PATH:firebase-service-account.json}
 
 # Steam API Configuration (get your key from https://steamcommunity.com/dev/apikey)
-steam.api.key=${STEAM_API_KEY:}
+steam.api.key=${STEAM_API_KEY:REDACTED_STEAM_API_KEY}
+
+# Steam OpenID Configuration (local dev)
+steam.return-url=http://localhost:8080/auth/steam/callback
+steam.realm=http://localhost:8080
+
+# Frontend URL for redirects
+frontend.url=http://localhost:5173
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET:lutem-local-dev-secret-key-change-in-production-32chars}
+jwt.expiration-ms=604800000
 
 # Development logging
 logging.level.org.hibernate.SQL=DEBUG
