--- a/backend/src/main/resources/application-local.properties
+++ b/backend/src/main/resources/application-local.properties
@@ -35,6 +35,11 @@ frontend.url=http://localhost:5173
 jwt.secret=${JWT_SECRET:lutem-local-dev-secret-key-change-in-production-32chars}
 jwt.expiration-ms=604800000
 
+# Anthropic Claude API Configuration
+# Set ANTHROPIC_API_KEY environment variable locally
+anthropic.api.key=${ANTHROPIC_API_KEY:}
+anthropic.model=claude-haiku-4-5-20251001
+
 # Development logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.com.lutem=DEBUG
