--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,3 +37,7 @@ frontend.url=${FRONTEND_URL:https://lutembeta.netlify.app}
 # JWT Configuration
 jwt.secret=${JWT_SECRET:}
 jwt.expiration-ms=${JWT_EXPIRATION_MS:604800000}
+
+# Anthropic Claude API Configuration
+anthropic.api.key=${ANTHROPIC_API_KEY:}
+anthropic.model=${ANTHROPIC_MODEL:claude-3-haiku-20240307}
