--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -40,4 +40,4 @@ jwt.expiration-ms=${JWT_EXPIRATION_MS:604800000}
 
 # Anthropic Claude API Configuration
 anthropic.api.key=${ANTHROPIC_API_KEY:}
-anthropic.model=${ANTHROPIC_MODEL:claude-3-haiku-20240307}
+anthropic.model=${ANTHROPIC_MODEL:claude-haiku-4-5-20251001}
