feat: Comprehensive codebase improvements for production readiness
Security:
- Fix Firebase token verification (was bypassed)
- Centralize CORS config, remove wildcard origins
- Add rate limiting interceptor (60 req/min)
- Gate dev endpoints behind lutem.dev-mode property
- Add global exception handler with @ControllerAdvice

Performance:
- Change EAGER to LAZY loading on Game entity collections
- Add pagination endpoint /games/paged
- Add @Transactional(readOnly=true) to read operations
- Add React.lazy() code splitting for routes

Code Quality:
- Replace System.out.println with SLF4J logging
- Add Jakarta Validation on RecommendationRequest
- Add spring-boot-starter-validation dependency
- Add frontend ErrorBoundary component
- Add API client retry logic with exponential backoff

Testing:
- Add GameControllerTest integration tests
- Add GameSessionServiceTest unit tests
- Add application-test.properties for H2 test DB
- Make Firestore optional for test context

Documentation:
- Add CODEBASE_ANALYSIS.md with findings and action plan

--- a/backend/src/main/resources/application-local.properties
+++ b/backend/src/main/resources/application-local.properties
@@ -43,3 +43,6 @@ anthropic.model=claude-haiku-4-5-20251001
 # Development logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.com.lutem=DEBUG
+
+# Development mode (enables dev endpoints)
+lutem.dev-mode=true
