--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -41,3 +41,10 @@ jwt.expiration-ms=${JWT_EXPIRATION_MS:604800000}
 # Anthropic Claude API Configuration
 anthropic.api.key=${ANTHROPIC_API_KEY:}
 anthropic.model=${ANTHROPIC_MODEL:claude-haiku-4-5-20251001}
+
+# Development mode (disables dev endpoints in production)
+lutem.dev-mode=${LUTEM_DEV_MODE:false}
+
+# Rate limiting configuration
+lutem.rate-limit.enabled=${RATE_LIMIT_ENABLED:true}
+lutem.rate-limit.requests-per-minute=${RATE_LIMIT_RPM:60}
