--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,6 +14,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
+# Batch-fetch lazy collections (reduces N+1 queries from ~2000 to ~70)
+spring.jpa.properties.hibernate.default_batch_fetch_size=32
+
 # Connection pool settings
 spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL:10}
 spring.datasource.hikari.minimum-idle=${HIKARI_MIN_IDLE:2}
@@ -31,6 +34,7 @@ management.endpoint.health.show-details=never
 # Reduce logging for production
 logging.level.org.hibernate=WARN
 logging.level.org.springframework=WARN
+logging.level.com.lutem.mvp=INFO
 
 # Firebase Configuration
 firebase.credentials.path=${FIREBASE_CREDENTIALS_PATH:firebase-service-account.json}
